# chat_bot

./: .gitignore
backend/: h.txt
backend/backend/: app.py
backend/chat_bot_project/: README.md  pyproject.toml  requirements.txt
backend/chat_bot_project/src/chat_bot_project/: chart_agent.py  crew.py  main.py
